# Manak

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  FindManak.cmake  HISTORY.txt  README.md  index.html  params.json
CMake/: GenerateDoxyfile.cmake
doc/: all_about_timing.dox  ambiguity_resolution.dox  auto_registration.dox  build.dox  comparison_framework.dox  groups.dox  hierarchy.dox  main.dox  manual_registration.dox  multi_file.dox  normal_module.dox  output_formats.dox  parametrized_benchmarks.dox  quick_guide.dox  setting_environment.dox  simple_module.dox  test.dox  test_framework.dox
doc/samples/: comp_1.html  hierarchy_1.html  p_bench_1.html  p_bench_2.html  qg_intro_sec_4.html  s_mod_1.html  s_mod_2.html  test_fr_1.html
examples/Advance_Function_Registration/: example1.cpp  example2.cpp  runme.sh
examples/Multi_File_Example/: file1.cpp  file2.cpp  proj_init.cpp  proj_init.hpp  runme.sh
html/: all__about__timing_8dox.html  all_time.html  ambiguity__resolution_8dox.html  annotated.html  annotated.js  auto__registration_8dox.html  auto_reg.html  base__library_8hpp.html  base__library_8hpp__dep__incl.map  base__library_8hpp__dep__incl.md5  base__library_8hpp__incl.map  base__library_8hpp__incl.md5  base__library_8hpp_source.html  benchmark__case_8hpp.html  benchmark__case_8hpp.js  benchmark__case_8hpp__dep__incl.map  benchmark__case_8hpp__dep__incl.md5  benchmark__case_8hpp__incl.map  benchmark__case_8hpp__incl.md5  benchmark__case_8hpp_source.html  benchmark__suite_8hpp.html  benchmark__suite_8hpp.js  benchmark__suite_8hpp__dep__incl.map  benchmark__suite_8hpp__dep__incl.md5  benchmark__suite_8hpp__incl.map  benchmark__suite_8hpp__incl.md5  benchmark__suite_8hpp_source.html  build.html  build_8dox.html  classes.html  classmanak_1_1BenchmarkCase-members.html  classmanak_1_1BenchmarkCase.html  classmanak_1_1BenchmarkCase.js  classmanak_1_1BenchmarkCase__coll__graph.map  classmanak_1_1BenchmarkCase__coll__graph.md5  classmanak_1_1BenchmarkCase__inherit__graph.map  classmanak_1_1BenchmarkCase__inherit__graph.md5  classmanak_1_1BenchmarkSuite-members.html  classmanak_1_1BenchmarkSuite.html  classmanak_1_1BenchmarkSuite.js  (+511 more)
html/samples/: comp_1.html  comp_2.html  comp_3.html  hierarchy_1.html  hierarchy_2.html  hierarchy_3.html  n_mod_1.html  n_mod_2.html  out_format_1.html  p_bench_1.html  p_bench_3.html  qg_1.html  qg_2.html  qg_3.html  qg_intro_sec_1.html  qg_intro_sec_2.html  qg_intro_sec_3.html  s_mod_1.html  test_fr_2.html
src/manak/: CMakeLists.txt  manak.hpp
src/manak/benchmark_suit/: base_library.hpp  benchmark_case.hpp  benchmark_case_impl.hpp  benchmark_suite.hpp  benchmark_suite_impl.hpp  html_output_handler.hpp  html_output_handler_impl.hpp  manak_benchmark_macros.hpp  manak_case.hpp  manak_macros.hpp  manak_suite.hpp  module_benchmark_case.hpp  output_handler.hpp  output_handler_impl.hpp  output_manager.hpp  output_manager_impl.hpp  pmeasure.hpp  result_collector.hpp  result_collector_impl.hpp  run_tree.hpp  run_tree_impl.hpp  set_env.hpp  simple_module_benchmark_case.hpp  t_manak_case.hpp  txt_output_handler.hpp  txt_output_handler_impl.hpp
src/manak/benchmark_suite/: benchmark_case.hpp  benchmark_case.ipp  benchmark_case_impl.hpp  benchmark_suite.hpp  manak_benchmark_macros.hpp  module_benchmark_case.hpp  simple_module_benchmark_case.hpp  t_benchmark_case.hpp
src/manak/build_test/: CMakeLists.txt  manak_test.hpp  mfile_test.cpp  mfile_test_1.cpp  mfile_test_2.cpp
src/manak/build_test/module/: CMakeLists.txt  auto_reg_test.cpp  manual_reg_test.cpp
src/manak/build_test/simple_module/: CMakeLists.txt  auto_reg_test.cpp  manual_reg_test.cpp
src/manak/manak_suite/: CMakeLists.txt  manak_case.hpp  manak_group.hpp  manak_macros.hpp  manak_suite.cpp  manak_suite.hpp  manak_suite_impl.hpp  result_collector.cpp  result_collector.hpp  result_collector_impl.hpp  t_manak_case.hpp
src/manak/output_manager/: CMakeLists.txt  html_output_handler.cpp  html_output_handler.hpp  html_output_handler_impl.hpp  output_handler.hpp  output_handler_impl.hpp  output_manager.cpp  output_manager.hpp  output_manager_impl.hpp  txt_output_handler.cpp  txt_output_handler.hpp  txt_output_handler_impl.hpp
src/manak/test_suite/: CMakeLists.txt  monitor_entry.hpp  test_macros.hpp  test_monitor.cpp  test_monitor.hpp  test_monitor_impl.hpp  test_suite.hpp
src/manak/util/: CMakeLists.txt  cli.hpp  log.hpp  macro_utils.hpp  manak_env.hpp  object_store.hpp  object_store_impl.hpp  set_env.hpp  template_utils.hpp  timer.hpp  timer_impl.hpp  version.hpp
